--- a/PharmaFlow.AdministrationService/Properties/launchSettings.json
+++ b/PharmaFlow.AdministrationService/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5151"
+      "applicationUrl": "http://localhost:5289"
     },
     "https": {
       "commandName": "Project",
@@ -18,7 +18,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7087;http://localhost:5151"
+      "applicationUrl": "https://localhost:7165;http://localhost:5289"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -28,6 +28,15 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
+    "pharmaflow.administrationservice": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    },
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
@@ -36,13 +45,12 @@
       "useSSL": true
     }
   },
-  "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:62876",
-      "sslPort": 44304
+      "applicationUrl": "http://localhost:54202/",
+      "sslPort": 44316
     }
   }
 }
