--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,38 +1,11 @@
 version: '3.4'
 
 services:
-  pharmaflow.administrationmanager:
+  pharmaflow.administrationservice:
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=https://+:443;http://+:80
-    ports:
-      - "80"
-      - "443"
+      ASPNETCORE_ENVIRONMENT: Development
+      ASPNETCORE_URLS: http://+:8080;https://+:443
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
-
-  mssql:
-    image: mcr.microsoft.com/mssql/server:2022-latest
-    container_name: mssql-server
-    ports:
-      - "8001:1433"
-    environment:
-      - SA_PASSWORD=password
-      - ACCEPT_EULA=Y
-    
-  keycloak:
-    image: jboss/keycloak:16.1.1
-    container_name: keycloak
-    depends_on:
-      - mssql
-    ports:
-      - "38080:8080"
-    environment:
-      - DB_VENDOR=mssql
-      - DB_ADDR=mssql
-      - DB_DATABASE=keycloak
-      - DB_USER=mssql
-      - DB_PASSWORD=password
-      - KEYCLOAK_USER=admin
-      - KEYCLOAK_PASSWORD=password
+      
