--- a/launchSettings.json
+++ b/launchSettings.json
@@ -4,7 +4,9 @@
       "commandName": "DockerCompose",
       "commandVersion": "1.0",
       "serviceActions": {
-        "pharmaflow.administrationmanager": "StartDebugging"
+        "pharmaflow.administrationmanager": "StartDebugging",
+        "pharmacyaccess": "StartDebugging",
+        "pharmaflow.pharmacyaccess": "StartDebugging"
       }
     }
   }
